--- a/style.css
+++ b/style.css
@@ -10,3 +10,16 @@ svg {
 .bar:hover {
   fill: #9fa8da; /*   indigo lighten-3 */
 }
+
+div.tooltip {
+  position: absolute;
+  text-align: center;
+  line-height: 1.5em;
+  width: 110px;
+  height: 35px;
+  padding: 14px;
+  font-size: 0.8em;
+  background: #e8eaf6; /* indigo lighten-5 */
+  border-radius: 8px;
+  pointer-events: none;
+}
